--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     cursor: pointer; 
     padding: 10px 30px; 
     font-size: 1vw;
-    text-decoration: none;" href ='glitched.w3spaces.com'>Changelog</a>
+    text-decoration: none;" href ='https://glitched.w3spaces.com/'>Changelog</a>
     <br>
     <br>
     <a style="background-color: rgb(24, 24, 24);
