--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
     font-size: 1vw;
     text-decoration: none;" href =''>Shop coming soon!</a>
     <br>
+    <br>
+    <a style="background-color: rgb(24, 24, 24);
+    color: #fff; 
+    cursor: pointer; 
+    padding: 10px 30px; 
+    font-size: 1vw;
+    text-decoration: none;" href ='https://forms.gle/vaJQYGbsQBsofk188'>Report Bugs/ Give suggestions!</a>
+    <br>
 
 
     
