--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     cursor: pointer; 
     padding: 10px 30px; 
     font-size: 1vw;
-    text-decoration: none;" href ='https://forms.gle/vaJQYGbsQBsofk188'>Report Bugs/ Give suggestions!</a>
+    text-decoration: none;" href ='https://forms.gle/DTaXa2j8VnhWfjym9'>Report Bugs/ Give suggestions!</a>
     <br>
 
 
