--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         cursor: pointer; 
         padding: 10px 30px; 
         font-size: 3vw;
-        text-decoration: none;" href ='https://hardikcodes.github.io/Glitched/'>Play</a>
+        text-decoration: none;" href ='https://z-e-games.github.io/Glitched/'>Play</a>
         <br>
         <br>
         <br>
